--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     playGame('rock');
     
-" class="move-button"><img class="move-icon" src="/icons/rock-emoji.png" alt="" ></button>
+" class="move-button"><img class="move-icon" src="./icons/rock-emoji.png" alt="" ></button>
 
 <button onclick="
   
