--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
     
     "
- class="move-button"><img class="move-icon"  src="./icons/paper-emoji.png" alt="" ></button>
+ class="move-button"><img class="move-icon"  src="./icons/paper-emoji.png" alt="Paper img" ></button>
    
    
 <button onclick="
